--- a/relogio/admin.html
+++ b/relogio/admin.html
@@ -115,18 +115,18 @@
 </head>
 <body>
     <div class="container">
-    <!-- Cabeçalho reorganizado -->
+    <!-- Cabeçalho -->
     <div class="d-flex justify-content-between align-items-center mb-4">
-        <!-- Botão Voltar à esquerda -->
-        <a href="../relogio/" class="btn btn-add">
-            <i class="fas fa-arrow-left me-2"></i> Voltar para o Relógio
+        <!-- Botão Voltar simplificado -->
+        <a href="../relogio/" class="btn btn-outline-secondary">
+            ← Voltar para o Relógio
         </a>
         
-        <!-- Título central flexível -->
-        <h1 class="mb-0 mx-3 text-center flex-grow-1">Painel Admin - Relógio de Oração</h1>
+        <!-- Título central -->
+        <h1 class="mb-0 mx-auto">Painel Admin - Relógio de Oração</h1>
         
-        <!-- Botão Adicionar à direita -->
-        <button class="btn btn-add" id="btnAddHorario">
+        <!-- Botão Adicionar Horário -->
+        <button class="btn btn-primary" id="btnAddHorario">
             <i class="fas fa-plus me-2"></i> Adicionar Horário
         </button>
     </div>
