--- a/relogio/admin.html
+++ b/relogio/admin.html
@@ -125,8 +125,8 @@
         <!-- Título central -->
         <h1 class="mb-0 mx-auto">Painel Admin - Relógio de Oração</h1>
         
-        <!-- Botão Adicionar Horário -->
-        <button class="btn btn-primary" id="btnAddHorario">
+        <!-- Botão Adicionar Horário (MANTIDO EXATAMENTE COMO ESTAVA) -->
+        <button class="btn btn-add" id="btnAddHorario">
             <i class="fas fa-plus me-2"></i> Adicionar Horário
         </button>
     </div>
