--- a/relogio/admin.html
+++ b/relogio/admin.html
@@ -115,17 +115,15 @@
 </head>
 <body>
     <div class="container">
-    <!-- Cabeçalho -->
     <div class="d-flex justify-content-between align-items-center mb-4">
-        <!-- Botão Voltar simplificado -->
+        <!-- Botão Voltar com ícone -->
         <a href="../relogio/" class="btn btn-outline-secondary">
-            ← Voltar para o Relógio
+            <i class="fas fa-arrow-left me-2"></i> Voltar para o Relógio
         </a>
         
-        <!-- Título central -->
         <h1 class="mb-0 mx-auto">Painel Admin - Relógio de Oração</h1>
         
-        <!-- Botão Adicionar Horário (MANTIDO EXATAMENTE COMO ESTAVA) -->
+        <!-- Botão Adicionar (mantido original) -->
         <button class="btn btn-add" id="btnAddHorario">
             <i class="fas fa-plus me-2"></i> Adicionar Horário
         </button>
