--- a/relogio/index.html
+++ b/relogio/index.html
@@ -92,6 +92,28 @@
     </style>
 </head>
 <body>
+
+
+    <!-- Script de autenticação (adicione no início do <body>) -->
+<script type="module">
+  import { checkAuth } from './auth.js';
+  import { isUserAdmin } from './users.js'; // Adicione esta importação
+  
+  document.addEventListener('DOMContentLoaded', async () => {
+    const user = await checkAuth();
+    
+    // Mostrar menu admin se o usuário for administrador
+    if (user && await isUserAdmin()) {
+      document.getElementById('adminMenuItem').style.display = 'block';
+    }
+  });
+</script>
+
+
+
+
+
+    
     <div class="app-bar">
         <button onclick="window.location.href='https://bcrenato.github.io/cadastro/'" aria-label="Voltar">&#8592;</button>
         Relógio de Oração
