--- a/presença/lista_culto.html
+++ b/presença/lista_culto.html
@@ -42,7 +42,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link" href="index.html">
+            <a class="nav-link" href="lista.html">
               <i class="bi bi-arrow-left"></i> Voltar para Cadastro
             </a>
           </li>
