--- a/index.html
+++ b/index.html
@@ -59,6 +59,14 @@
             <i class="fas fa-clock me-1"></i> Relógio de Oração
           </a>
         </li>
+
+        <!-- Lista presenca nos cultos -->
+        <li class="nav-item">
+          <a class="nav-link" href="presenca/lista.html">
+            <i class="fas fa-clock me-1"></i> Relógio de Oração
+          </a>
+        </li>
+        
         
         <!-- Menu de Admin (só aparece para administradores) -->
         <li class="nav-item" id="adminMenuItem" style="display: none;">
