--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <!-- Lista presenca nos cultos -->
         <li class="nav-item">
           <a class="nav-link" href="presenca/lista.html">
-            <i class="fas fa-clock me-1"></i> Relógio de Oração
+            <i class="fas fa-clock me-1"></i> Presença Cultos
           </a>
         </li>
         
