--- a/presenca/lista.html
+++ b/presenca/lista.html
@@ -45,7 +45,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link active" href="index.html">
+            <a class="nav-link active" href="../index.html">
               <i class="bi bi-house-door"></i> Cadastro
             </a>
           </li>
