--- a/relogio/admin.html
+++ b/relogio/admin.html
@@ -6,7 +6,6 @@
 <title>Admin - Relógio de Oração</title>
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-<link rel="icon" href="data:,">
 <style>
 body { font-family: Arial, sans-serif; margin: 0; padding: 20px; background-color: #f5f5f5; }
 .container { max-width: 1200px; margin: 0 auto; background: white; padding: 20px; border-radius: 8px; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
@@ -23,14 +22,6 @@ tr:nth-child(even) { background-color: #f9f9f9; }
 </head>
 
 <body>
-
-<script type="module">
-import { checkAuth } from '../auth.js';
-const user = await checkAuth();
-if (!user) {
-  window.location.href = '../login.html';
-}
-</script>
 
 <div class="container">
   <a href="../relogio/" class="btn btn-outline-secondary">
@@ -62,26 +53,20 @@ if (!user) {
 import { checkAuth } from '../auth.js';
 import { db } from '../firebase-config.js';
 
-const user = await checkAuth();
-
-if (!user) {
-  window.location.href = '../login.html';
-} else {
-  console.log('Usuário autenticado:', user.email);
-  startAdmin();
-}
-
-function startAdmin() {
-  const horariosRef = db.ref('relogio/horarios');
-
-  function loadHorarios() {
-    horariosRef.on('value', (snapshot) => {
-      renderHorarios(snapshot.val());
-    });
+document.addEventListener('DOMContentLoaded', async () => {
+  const user = await checkAuth();
+  if (!user) {
+    window.location.href = '../login.html';
+    return;
   }
 
+  console.log('Admin autenticado:', user.email);
+
+  const horariosRef = db.ref('relogio/horarios');
+
+  const tbody = document.getElementById('horariosBody');
+
   function renderHorarios(horarios) {
-    const tbody = document.getElementById('horariosBody');
     tbody.innerHTML = '';
 
     if (!horarios) {
@@ -89,49 +74,47 @@ function startAdmin() {
       return;
     }
 
-    Object.keys(horarios).forEach((key) => {
-      const horario = horarios[key];
+    Object.entries(horarios).forEach(([key, data]) => {
       const row = document.createElement('tr');
-
       row.innerHTML = `
         <td>${key}</td>
-        <td>${horario.nome_reserva || ''}</td>
-        <td>${horario.reservado ? 'Reservado' : 'Disponível'}</td>
+        <td>${data.nome_reserva || ''}</td>
+        <td>${data.reservado ? 'Reservado' : 'Disponível'}</td>
         <td>
           <button class="btn btn-edit" data-horario="${key}">Editar</button>
           <button class="btn btn-delete" data-horario="${key}">Excluir</button>
         </td>
       `;
-
       tbody.appendChild(row);
     });
 
     document.querySelectorAll('.btn-edit').forEach(btn => {
-      btn.addEventListener('click', () => openEditModal(btn.dataset.horario));
+      btn.onclick = () => editar(btn.dataset.horario);
     });
     document.querySelectorAll('.btn-delete').forEach(btn => {
-      btn.addEventListener('click', () => confirmDelete(btn.dataset.horario));
+      btn.onclick = () => deletar(btn.dataset.horario);
     });
   }
 
-  function openEditModal(horarioKey) {
-    const nome = prompt(`Editar nome do horário ${horarioKey}:`);
+  function editar(horario) {
+    const nome = prompt(`Digite o nome para o horário ${horario}: (deixe vazio para liberar)`);
     if (nome === null) return;
+
     const reservado = nome.trim() !== '';
-    horariosRef.child(horarioKey).update({
+    horariosRef.child(horario).update({
       nome_reserva: nome,
       reservado: reservado,
       data_reserva: reservado ? new Date().toISOString() : ''
     });
   }
 
-  function confirmDelete(horarioKey) {
-    if (confirm(`Tem certeza que deseja excluir o horário ${horarioKey}?`)) {
-      horariosRef.child(horarioKey).remove();
+  function deletar(horario) {
+    if (confirm(`Tem certeza que deseja excluir o horário ${horario}?`)) {
+      horariosRef.child(horario).remove();
     }
   }
 
-  document.getElementById('btnAddHorario').addEventListener('click', () => {
+  document.getElementById('btnAddHorario').onclick = () => {
     const horario = prompt('Informe o novo horário (ex: 08:00):');
     if (!horario) return;
     horariosRef.child(horario).set({
@@ -139,10 +122,12 @@ function startAdmin() {
       nome_reserva: '',
       data_reserva: ''
     });
-  });
+  };
 
-  loadHorarios();
-}
+  horariosRef.on('value', snapshot => {
+    renderHorarios(snapshot.val());
+  });
+});
 </script>
 
 </body>
