--- a/relogio/admin.html
+++ b/relogio/admin.html
@@ -28,7 +28,7 @@ tr:nth-child(even) { background-color: #f9f9f9; }
     <i class="fas fa-arrow-left"></i> Voltar para o Relógio
   </a>
 
-  <h1>Painel Admin - Relógio de Oração</h1>
+  <h1>Painel Admin - Relógio de Oraçãoxx</h1>
 
   <button class="btn btn-add" id="btnAddHorario">
     <i class="fas fa-plus"></i> Adicionar Horário
