--- a/presenca/lista_culto.html
+++ b/presenca/lista_culto.html
@@ -372,7 +372,7 @@ function adicionarLogoEFrase(doc, yPos, cultoDate, callback) {
   const lineHeight = 7;
 
   const logo = new Image();
-  logo.src = 'caminho/para/logo.png'; // ajuste para a URL correta do logo
+  logo.src = './logo.png'; // ajuste para a URL correta do logo
 
   logo.onload = () => {
     const logoWidth = 40;
