--- a/presenca/lista_culto.html
+++ b/presenca/lista_culto.html
@@ -372,39 +372,47 @@ function adicionarLogoEFrase(doc, yPos, cultoDate, callback) {
   const lineHeight = 7;
 
   const logo = new Image();
-logo.src = './logo.png'; // ajuste para a URL correta do logo
+  logo.src = './logo.png'; // ajuste para a URL correta do logo
 
-logo.onload = () => {
-  const pageWidth = doc.internal.pageSize.getWidth();
-  const lineHeight = 7;
+  logo.onload = () => {
+    const desiredWidth = 40; // 🔷 ajuste aqui a largura do logo no PDF
+    const aspectRatio = logo.height / logo.width;
 
-  const desiredWidth = 80; // 🔷 ajuste este número para alterar a largura do logo
-  const aspectRatio = logo.height / logo.width; // calcula a proporção original
+    const logoWidth = desiredWidth;
+    const logoHeight = desiredWidth * aspectRatio;
 
-  const logoWidth = desiredWidth;
-  const logoHeight = desiredWidth * aspectRatio;
+    const logoX = (pageWidth - logoWidth) / 2;
 
-  const logoX = (pageWidth - logoWidth) / 2;
+    // adiciona logo
+    doc.addImage(logo, 'PNG', logoX, yPos, logoWidth, logoHeight);
+    yPos += logoHeight + 5;
 
-  doc.addImage(logo, 'PNG', logoX, yPos, logoWidth, logoHeight);
-  yPos += logoHeight + 5;
+    // frase
+    doc.setFont('helvetica', 'normal');
+    doc.setFontSize(12);
+    doc.text('Famílias vivendo na graça e unção do Espírito', pageWidth / 2, yPos, { align: 'center' });
+    yPos += lineHeight;
 
-  doc.setFont('helvetica', 'normal');
-  doc.setFontSize(12);
-  doc.text('Famílias vivendo na graça e unção do Espírito', pageWidth / 2, yPos, { align: 'center' });
-  yPos += lineHeight;
+    // 🔷 adiciona linha horizontal
+    yPos += 2;
+    doc.setDrawColor(150);
+    doc.setLineWidth(0.5);
+    doc.line(margin, yPos, pageWidth - margin, yPos);
+    yPos += 5;
 
-  doc.setFont('helvetica', 'bold');
-  doc.setFontSize(16);
-  doc.text('Lista de Presença - Culto', pageWidth / 2, yPos, { align: 'center' });
-  yPos += lineHeight;
+    // título
+    doc.setFont('helvetica', 'bold');
+    doc.setFontSize(16);
+    doc.text('Lista de Presença - Culto', pageWidth / 2, yPos, { align: 'center' });
+    yPos += lineHeight;
 
-  doc.setFontSize(14);
-  doc.text(formatarDataSimples(cultoDate), pageWidth / 2, yPos, { align: 'center' });
-  yPos += lineHeight * 2;
+    // data
+    doc.setFontSize(14);
+    doc.text(formatarDataSimples(cultoDate), pageWidth / 2, yPos, { align: 'center' });
+    yPos += lineHeight * 2;
 
-  callback(yPos);
-};
+    callback(yPos);
+  };
 }
 
 function continuarGeracaoPDF(doc, yPos, cultoDate, presentesData) {
