--- a/index.html
+++ b/index.html
@@ -186,9 +186,11 @@
           <div class="relative">
             <select id="funcao" name="funcao" class="form-control" required>
               <option value="">Selecione a função</option>
-              <option value="membro">Membro</option>
-              <option value="diacono">Diácono</option>
               <option value="pastor">Pastor</option>
+              <option value="missionario">Missionario(a)</option>
+              <option value="diacono">Diácono</option>
+              <option value="obreiro">Obreiro(a)</option>
+              <option value="membro">Membro</option>
             </select>
             <i class="fas fa-user-tag input-icon"></i>
           </div>
