--- a/listagem.html
+++ b/listagem.html
@@ -212,7 +212,7 @@
         // Define ordem de prioridade para funções (case insensitive)
         ordemFuncao: m.funcao?.toLowerCase() === "Pastor" ? 1 :
                     m.funcao?.toLowerCase() === "Missionario(a)" ? 2 :
-                    m.funcao?.toLowerCase() === "Diácono" ? 3 : 
+                    m.funcao?.toLowerCase() === "Diacono" ? 3 : 
                     m.funcao?.toLowerCase() === "Obreiro(a)" ? 4 :
                     m.funcao?.toLowerCase() === "Membro" ? 5 : 6,
 
