--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           <label class="btn-upload">
             <i class="fas fa-camera mr-2"></i>
             Selecionar/Tirar Foto
-            <input type="file" id="foto" accept="image/*" class="d-none" required>
+            <input type="file" id="foto" accept="image/*" class="d-none">
           </label>
         </div>
       </div>
@@ -166,7 +166,7 @@
         <div>
           <label for="batismo" class="form-label required-field">Data de Batismo</label>
           <div class="relative">
-            <input type="date" id="batismo" name="batismo" class="form-control" required>
+            <input type="date" id="batismo" name="batismo" class="form-control">
             <i class="fas fa-calendar-check input-icon"></i>
           </div>
         </div>
