--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <div>
           <label for="cep" class="form-label required-field">CEP</label>
           <div class="relative">
-            <input type="text" id="cep" name="cep" class="form-control" required placeholder="00000-000" maxlength="9" oninput="buscarCEP()" onblur="buscarCEP()">
+            <input type="text" id="cep" name="cep" class="form-control" placeholder="00000-000" maxlength="9" oninput="buscarCEP()" onblur="buscarCEP()">
             <i class="fas fa-map-marker-alt input-icon"></i>
           </div>
         </div>
@@ -130,7 +130,7 @@
         <div>
           <label for="endereco" class="form-label required-field">Endereço</label>
           <div class="relative">
-            <input type="text" id="endereco" name="endereco" class="form-control" required placeholder="Digite o endereço completo">
+            <input type="text" id="endereco" name="endereco" class="form-control" placeholder="Digite o endereço completo">
             <i class="fas fa-map-marker-alt input-icon"></i>
           </div>
         </div>
@@ -139,7 +139,7 @@
         <div>
           <label for="bairro" class="form-label required-field">Bairro</label>
             <div class="relative">
-              <input type="text" id="bairro" name="bairro" class="form-control" required placeholder="Digite o Bairro">
+              <input type="text" id="bairro" name="bairro" class="form-control" placeholder="Digite o Bairro">
               <i class="fas fa-map-marker-alt input-icon"></i>
             </div>
           </div>
@@ -148,7 +148,7 @@
           <div>
             <label for="cidade" class="form-label required-field">Cidade</label>
             <div class="relative">
-              <input type="text" id="cidade" name="cidade" class="form-control" required placeholder="Digite a Cidade">
+              <input type="text" id="cidade" name="cidade" class="form-control" placeholder="Digite a Cidade">
               <i class="fas fa-map-marker-alt input-icon"></i>
             </div>
           </div>
@@ -157,14 +157,14 @@
           <div>
             <label for="estado" class="form-label required-field">Estado</label>
             <div class="relative">
-              <input type="text" id="estado" name="estado" class="form-control" required placeholder="Digite o Estado">
+              <input type="text" id="estado" name="estado" class="form-control" placeholder="Digite o Estado">
               <i class="fas fa-map-marker-alt input-icon"></i>
             </div>
           </div>
 
         <!-- Coluna 1 -->
         <div>
-          <label for="batismo" class="form-label required-field">Data de Batismo</label>
+          <label for="batismo" class="form-label">Data de Batismo</label>
           <div class="relative">
             <input type="date" id="batismo" name="batismo" class="form-control">
             <i class="fas fa-calendar-check input-icon"></i>
