--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
               <option value="">Selecione a função</option>
               <option value="Pastor">Pastor</option>
               <option value="Missionario(a)">Missionario(a)</option>
-              <option value="Diácono">Diácono</option>
+              <option value="Diacono">Diácono</option>
               <option value="Obreiro(a)">Obreiro(a)</option>
               <option value="Membro">Membro</option>
             </select>
