--- a/listagem.html
+++ b/listagem.html
@@ -227,19 +227,24 @@ btnExportarPDF.addEventListener("click", async () => {
     });
 
     doc.autoTable({
-      head: [["NOME", "NASCIM", "SEXO", "TELEFONE", "FUNÇÃO", "BATISMO", "ENDEREÇO"]],
-      body: membrosArray,
-      startY: startY,
-      margin: { top: 10, bottom: 15 },
-      styles: { fontSize: 10 },
-      headStyles: { fillColor: [0, 128, 0], textColor: [255, 255, 255], fontSize: 10, fontStyle: 'bold' },
-      didDrawPage: function(data) {
-        doc.setFontSize(8);
-        doc.text(`Página ${data.pageNumber}`, pageWidth / 2, doc.internal.pageSize.getHeight() - 10, { align: "center" });
-        const now = new Date();
-        doc.text(`Gerado em: ${now.toLocaleString("pt-BR")}`, pageWidth - 10, doc.internal.pageSize.getHeight() - 10, { align: "right" });
-      }
-    });
+  head: [["NOME", "NASCIM", "SEXO", "TELEFONE", "FUNÇÃO", "BATISMO", "ENDEREÇO"]],
+  body: membrosArray,
+  startY: startY,
+  margin: { top: 10, bottom: 15 },
+  styles: { fontSize: 10 },
+  headStyles: { fillColor: [0, 128, 0], textColor: [255, 255, 255], fontSize: 10, fontStyle: 'bold' },
+  columnStyles: {
+    0: { cellWidth: 60 },  // Nome
+    6: { cellWidth: 80 }   // Endereço
+    // As colunas 1 a 5 ficam automáticas
+  },
+  didDrawPage: function(data) {
+    doc.setFontSize(8);
+    doc.text(`Página ${data.pageNumber}`, pageWidth / 2, doc.internal.pageSize.getHeight() - 10, { align: "center" });
+    const now = new Date();
+    doc.text(`Gerado em: ${now.toLocaleString("pt-BR")}`, pageWidth - 10, doc.internal.pageSize.getHeight() - 10, { align: "right" });
+  }
+});
 
     doc.save("Lista_Membros.pdf");
     mostrarMensagemPDF("✅ PDF gerado com sucesso!");
