--- a/presenca/lista_culto.html
+++ b/presenca/lista_culto.html
@@ -432,11 +432,10 @@ function continuarGeracaoPDF(doc, yPos, cultoDate, presentesData) {
     }
   });
 
-  // 🔷 Ordenar as linhas pela função na ordem desejada
   const ordemFuncoes = ['Pastor', 'Missionario(a)', 'Diacono', 'Obreiro(a)', 'Membro'];
 
   rows.sort((a, b) => {
-    const funcA = a[2] || 'ZZZ'; // se não tem função, vai para o final
+    const funcA = a[2] || 'ZZZ';
     const funcB = b[2] || 'ZZZ';
 
     const idxA = ordemFuncoes.indexOf(funcA) !== -1 ? ordemFuncoes.indexOf(funcA) : ordemFuncoes.length;
@@ -446,7 +445,6 @@ function continuarGeracaoPDF(doc, yPos, cultoDate, presentesData) {
       return idxA - idxB;
     }
 
-    // opcional: se a função for a mesma, ordena por nome
     return a[0].localeCompare(b[0]);
   });
 
@@ -472,10 +470,14 @@ function continuarGeracaoPDF(doc, yPos, cultoDate, presentesData) {
 
   yPos = doc.lastAutoTable.finalY + 10;
 
+  const totalPresentes = membrosCount + visitantesCount;
+
   doc.setFontSize(12);
-  doc.text('Total de Presentes:', margin, yPos);
-  doc.text(`Membros: ${membrosCount}`, margin + 50, yPos);
-  doc.text(`Visitantes: ${visitantesCount}`, margin + 100, yPos);
+  doc.text(`Total de Presentes no culto: ${totalPresentes}`, margin, yPos);
+  yPos += 7;
+  doc.text(`Membros: ${membrosCount}`, margin, yPos);
+  yPos += 7;
+  doc.text(`Visitantes: ${visitantesCount}`, margin, yPos);
 
   doc.save(`presenca_culto_${cultoDate}.pdf`);
 }
