--- a/login.html
+++ b/login.html
@@ -13,14 +13,24 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    overflow: hidden;
   }
   .login-card {
     background: white;
     border-radius: 10px;
-    box-shadow: 0 4px 20px rgba(0,0,0,0.2);
+    box-shadow: 0 8px 30px rgba(0,0,0,0.2);
     padding: 2rem;
     max-width: 400px;
     width: 100%;
+    opacity: 0;
+    transform: translateY(-20px);
+    animation: fadeInUp 0.8s forwards ease-out;
+  }
+  @keyframes fadeInUp {
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
   }
   .login-logo img {
     max-width: 100px;
@@ -35,9 +45,12 @@
     background-color: #4e73df;
     border: none;
     font-weight: 600;
+    transition: all 0.3s ease;
   }
   .btn-login:hover {
     background-color: #3a5bc7;
+    transform: translateY(-2px);
+    box-shadow: 0 4px 10px rgba(0,0,0,0.2);
   }
   .footer-text {
     text-align: center;
