--- a/login.html
+++ b/login.html
@@ -4,11 +4,18 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Login - Sistema Igreja</title>
+
+<!-- Bootstrap -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+<!-- FontAwesome -->
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+<!-- Google Fonts -->
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+
 <style>
   body {
-    background: linear-gradient(135deg, #4e73df, #224abe);
+    font-family: 'Poppins', sans-serif;
+    background: linear-gradient(135deg, #a8e6cf, #81c784);
     min-height: 100vh;
     display: flex;
     align-items: center;
@@ -17,7 +24,7 @@
   }
   .login-card {
     background: white;
-    border-radius: 10px;
+    border-radius: 12px;
     box-shadow: 0 8px 30px rgba(0,0,0,0.2);
     padding: 2rem;
     max-width: 400px;
@@ -33,22 +40,30 @@
     }
   }
   .login-logo img {
-    max-width: 100px;
+    max-width: 140px;
     margin-bottom: 1rem;
   }
   .login-logo h3 {
-    font-weight: 700;
-    color: #4e73df;
+    font-weight: 600;
+    color: #4caf50;
     margin-top: 0.5rem;
   }
+  .form-label {
+    font-weight: 500;
+    color: #4caf50;
+  }
+  .form-control {
+    border-radius: 8px;
+  }
   .btn-login {
-    background-color: #4e73df;
+    background-color: #4caf50;
     border: none;
     font-weight: 600;
     transition: all 0.3s ease;
+    border-radius: 8px;
   }
   .btn-login:hover {
-    background-color: #3a5bc7;
+    background-color: #43a047;
     transform: translateY(-2px);
     box-shadow: 0 4px 10px rgba(0,0,0,0.2);
   }
@@ -84,7 +99,7 @@
       <input type="checkbox" class="form-check-input" id="remember">
       <label class="form-check-label" for="remember">Lembrar de mim</label>
     </div>
-    <button type="submit" class="btn btn-primary btn-login w-100">
+    <button type="submit" class="btn btn-success btn-login w-100">
       <i class="fas fa-sign-in-alt me-2"></i> Entrar
     </button>
   </form>
