--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   });
 </script>
 
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
+  <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
   <div class="container">
     <a class="navbar-brand" href="index.html">Cadastro da Igreja</a>
     
