--- a/listagem.html
+++ b/listagem.html
@@ -14,6 +14,22 @@ body { padding-top: 70px; }
   border-radius: 50%;
   margin-right: 10px;
 }
+
+  .navbar {
+  background-color: #4CAF50; /* verde */
+}
+
+.navbar .nav-link,
+.navbar .navbar-brand {
+  color: #fff;
+}
+
+.navbar .nav-link:hover,
+.navbar .navbar-brand:hover {
+  color: #ddd;
+}
+
+  
 .membro-item {
   display: flex;
   align-items: center;
