--- a/listagem.html
+++ b/listagem.html
@@ -52,7 +52,7 @@ body { padding-top: 70px; }
 <body>
 
 <!-- 🔹 Navbar -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
+<nav class="navbar navbar-expand-lg navbar-dark fixed-top">
   <div class="container">
     <a class="navbar-brand" href="index.html">Listagem</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
