--- a/relogio/index.html
+++ b/relogio/index.html
@@ -12,7 +12,7 @@
             left: 0;
             right: 0;
             height: 56px;
-            background-color: #3367D6;
+            background-color: #4CAF50;
             color: white;
             display: flex;
             align-items: center;
@@ -22,7 +22,12 @@
             font-weight: bold;
             font-size: 24px;
         }
-        
+
+        .navbar {
+  background-color: #4CAF50; /* verde */
+}
+
+
         body {
             font-family: Arial, sans-serif;
             max-width: 800px;
