--- a/register.html
+++ b/register.html
@@ -18,6 +18,22 @@
       padding-top: 70px;
       background-color: #f8f9fa;
     }
+
+     .navbar {
+  background-color: #4CAF50; /* verde */
+}
+
+.navbar .nav-link,
+.navbar .navbar-brand {
+  color: #fff;
+}
+
+.navbar .nav-link:hover,
+.navbar .navbar-brand:hover {
+  color: #ddd;
+}
+
+    
     .admin-card {
       border-left: 4px solid #ffc107;
     }
@@ -56,7 +72,7 @@
   </script>
 
   <!-- Navbar Administrativa -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-admin fixed-top">
+  <nav class="navbar navbar-expand-lg navbar-dark fixed-top"> //navbar-dark bg-admin fixed-top
     <div class="container">
       <a class="navbar-brand" href="index.html">
         <i class="fas fa-user-shield me-2"></i> Gerenciar Usuários
