--- a/register.html
+++ b/register.html
@@ -72,7 +72,7 @@
   </script>
 
   <!-- Navbar Administrativa -->
-  <nav class="navbar navbar-expand-lg navbar-dark fixed-top"> //navbar-dark bg-admin fixed-top
+  <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
     <div class="container">
       <a class="navbar-brand" href="index.html">
         <i class="fas fa-user-shield me-2"></i> Gerenciar Usuários
