--- a/register.html
+++ b/register.html
@@ -33,6 +33,18 @@
   color: #ddd;
 }
 
+
+    .btn-custom {
+  background-color: #ff0000; /* Vermelho */
+  border-color: #ff0000; /* Vermelho */
+  color: #ffffff; /* Branco */
+}
+
+.btn-custom:hover {
+  background-color: #cc0000; /* Vermelho mais escuro no hover */
+  border-color: #cc0000; /* Vermelho mais escuro no hover */
+}
+
     
     .admin-card {
       border-left: 4px solid #ffc107;
@@ -153,7 +165,7 @@
                 </label>
               </div>
               
-              <button type="submit" class="btn btn-primary w-100 py-2">
+              <button type="submit" class="btn btn-primary w-100 py-2 btn-custom">
                 <i class="fas fa-save me-2"></i> Cadastrar Usuário
               </button>
             </form>
