--- a/register.html
+++ b/register.html
@@ -165,7 +165,7 @@
                 </label>
               </div>
               
-              <button type="submit" class="btn btn-primary w-100 py-2 btn-custom">
+              <button type="submit" class="btn btn-primary btn-custom">
                 <i class="fas fa-save me-2"></i> Cadastrar Usuário
               </button>
             </form>
