--- a/register.html
+++ b/register.html
@@ -33,17 +33,15 @@
   color: #ddd;
 }
 
-
-    .btn-custom {
-  background-color: #ff0000; /* Vermelho */
-  border-color: #ff0000; /* Vermelho */
-  color: #ffffff; /* Branco */
-}
-
-.btn-custom:hover {
-  background-color: #cc0000; /* Vermelho mais escuro no hover */
-  border-color: #cc0000; /* Vermelho mais escuro no hover */
-}
+.btn-primary {
+        background-color: #28a745;
+        border-color: #28a745;
+    }
+    .btn-primary:hover {
+        background-color: #218838;
+        border-color: #1e7e34;
+    }
+    
 
     
     .admin-card {
