--- a/presenca/lista.html
+++ b/presenca/lista.html
@@ -45,6 +45,10 @@
 .navbar .navbar-brand:hover {
   color: #ddd;
 }
+
+    .bg-verde-escuro {
+        background-color: #1e7e34;
+    }
     
    
   </style>
@@ -76,7 +80,7 @@
 
   <div class="container py-4">
     <div class="card shadow">
-      <div class="card-header bg-primary text-white">
+      <div class="card-header bg-verde-escuro text-white">
         <h4 class="mb-0">Registro de Presença - Culto</h4>
       </div>
       <div class="card-body">
