--- a/presenca/lista_culto.html
+++ b/presenca/lista_culto.html
@@ -55,6 +55,14 @@
         background-color: #218838;
         border-color: #1e7e34;
     }
+    /* Adicione essas linhas para evitar o azul ao clicar */
+    .btn-primary:active,
+    .btn-primary:focus,
+    .btn-primary.active {
+        background-color: #1e7e34 !important;
+        border-color: #1c7430 !important;
+        box-shadow: 0 0 0 0.25rem rgba(40, 167, 69, 0.5) !important;
+    }
     
 
 
