--- a/presenca/lista_culto.html
+++ b/presenca/lista_culto.html
@@ -48,12 +48,12 @@
     }
 
  .btn-primary {
-        background-color: #28a745;
-        border-color: #28a745;
+        background-color: #28a745 !important;
+        border-color: #28a745 !important;
     }
     .btn-primary:hover {
-        background-color: #218838;
-        border-color: #1e7e34;
+        background-color: #218838 !important;
+        border-color: #1e7e34 !important;
     }
     /* Adicione essas linhas para evitar o azul ao clicar */
     .btn-primary:active,
