--- a/presenca/lista_culto.html
+++ b/presenca/lista_culto.html
@@ -44,7 +44,7 @@
 }
 
     .bg-verde-escuro {
-        background-color: #1e7e34;
+        background-color: #1e7e34 !important;
     }
 
  .btn-primary {
