--- a/listagem.html
+++ b/listagem.html
@@ -100,23 +100,45 @@ function carregarMembros(data) {
     return;
   }
 
-  for (const id in data) {
-    const membro = data[id];
-    const item = document.createElement("div");
-    item.className = "list-group-item membro-item";
+  const membrosArray = Object.entries(data).map(([id, m]) => {
+  const funcao = (m.funcao || "").toLowerCase();
+  let ordemFuncao = 6;
+  if (funcao === "pastor") ordemFuncao = 1;
+  else if (funcao === "missionario" || funcao === "missionario(a)") ordemFuncao = 2;
+  else if (funcao === "diacono") ordemFuncao = 3;
+  else if (funcao === "obreiro" || funcao === "obreiro(a)") ordemFuncao = 4;
+  else if (funcao === "membro") ordemFuncao = 5;
 
-    item.innerHTML = `
-      <input type="checkbox" class="form-check-input me-2 checkbox-selecao" data-id="${id}">
-      <a href="ficha.html?id=${id}" class="info-membro">
-        <img src="${membro.fotoURL || ''}" class="foto-miniatura" alt="Foto">
-        <div>
-          <div><strong>${membro.nome}</strong></div>
-          <small>${membro.funcao}</small>
-        </div>
-      </a>
-    `;
-    lista.appendChild(item);
-  }
+  return {
+    id,
+    ...m,
+    ordemFuncao
+  };
+});
+
+// ordena por ordem da função e depois por nome
+membrosArray.sort((a, b) => {
+  const ordemFuncao = a.ordemFuncao - b.ordemFuncao;
+  if (ordemFuncao !== 0) return ordemFuncao;
+  return (a.nome || "").localeCompare(b.nome || "");
+});
+
+for (const membro of membrosArray) {
+  const item = document.createElement("div");
+  item.className = "list-group-item membro-item";
+
+  item.innerHTML = `
+    <input type="checkbox" class="form-check-input me-2 checkbox-selecao" data-id="${membro.id}">
+    <a href="ficha.html?id=${membro.id}" class="info-membro">
+      <img src="${membro.fotoURL || ''}" class="foto-miniatura" alt="Foto">
+      <div>
+        <div><strong>${membro.nome}</strong></div>
+        <small>${membro.funcao}</small>
+      </div>
+    </a>
+  `;
+  lista.appendChild(item);
+}
 
   atualizarVisibilidadeCheckboxes();
 }
