--- a/index.html
+++ b/index.html
@@ -61,11 +61,18 @@
         </li>
 
         <!-- Lista presenca nos cultos -->
-        <li class="nav-item">
-          <a class="nav-link" href="presenca/lista.html">
-            <i class="fas fa-clock me-1"></i> Presença Cultos
-          </a>
-        </li>
+<li class="nav-item">
+  <a class="nav-link" href="presenca/lista.html">
+    <i class="fas fa-users me-1"></i> Presença Cultos
+  </a>
+</li>
+
+<!-- backup banco dados -->
+<li class="nav-item">
+  <a class="nav-link" href="backup.html">
+    <i class="fas fa-database me-1"></i> Backup e Restauração
+  </a>
+</li>
         
         
         <!-- Menu de Admin (só aparece para administradores) -->
