--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
             </div>
             
             <div class="nav-menu" id="navMenu">
-                <a href="dashboard.html" class="nav-item active">
+                <a href="index.html" class="nav-item active">
                     <i class="fas fa-tachometer-alt"></i>
                     <span>Dashboard</span>
                 </a>
@@ -223,11 +223,11 @@
                     <i class="fas fa-birthday-cake"></i>
                     <span>Aniversariantes</span>
                 </a>
-                <a href="relogio-oracao.html" class="nav-item">
+                <a href="relogio/index.html" class="nav-item">
                     <i class="fas fa-clock"></i>
                     <span>Relógio de Oração</span>
                 </a>
-                <a href="presenca-cultos.html" class="nav-item">
+                <a href="presenca/lista.html" class="nav-item">
                     <i class="fas fa-church"></i>
                     <span>Presença Cultos</span>
                 </a>
