--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                     <i class="fas fa-database"></i>
                     <span>Backup e Restauração</span>
                 </a>
-                <a href="cadastro-usuarios.html" class="nav-item">
+                <a href="register.html" class="nav-item">
                     <i class="fas fa-user-plus"></i>
                     <span>Cadastrar Usuários</span>
                 </a>
