--- a/cadastro-membros.html
+++ b/cadastro-membros.html
@@ -39,7 +39,7 @@
       <ul class="navbar-nav me-auto">
         <li class="nav-item">
           <a class="nav-link active" href="index.html">
-            <i class="fas fa-user-plus me-1"></i> Cadastro
+            <i class="fas fa-user-plus me-1"></i> Painel
           </a>
         </li>
         <li class="nav-item">
