--- a/listagem.html
+++ b/listagem.html
@@ -60,7 +60,7 @@ body { padding-top: 70px; }
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav me-auto">
-        <li class="nav-item"><a class="nav-link" href="index.html">Cadastro</a></li>
+        <li class="nav-item"><a class="nav-link" href="index.html">Painel</a></li>
         <li class="nav-item"><a class="nav-link active" href="listagem.html">Listagem</a></li>
         <li class="nav-item"><a class="nav-link" href="aniversariantes.html">Aniversariantes</a></li>
       </ul>
