--- a/presenca/lista.html
+++ b/presenca/lista.html
@@ -65,7 +65,7 @@
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
             <a class="nav-link active" href="../index.html">
-              <i class="bi bi-house-door"></i> Cadastro
+              <i class="bi bi-house-door"></i> Painel
             </a>
           </li>
           <li class="nav-item">
