--- a/register.html
+++ b/register.html
@@ -104,7 +104,7 @@
         <ul class="navbar-nav me-auto">
           <li class="nav-item">
             <a class="nav-link" href="index.html">
-              <i class="fas fa-arrow-left me-1"></i> Voltar
+              <i class="fas fa-arrow-left me-1"></i> Voltar para o Painel
             </a>
           </li>
           <li class="nav-item">
