--- a/cadastro-membros.html
+++ b/cadastro-membros.html
@@ -27,6 +27,18 @@
   });
 </script>
 
+<nav class="navbar">
+    <div class="navbar-nav">
+        <!-- Botão Home -->
+        <a href="index.html" class="nav-item">
+            <i class="fas fa-home"></i>
+            <span>Home</span>
+        </a>
+    
+    </div>
+</nav>
+  
+<!--
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
   <div class="container">
     <a class="navbar-brand" href="index.html">Cadastro da Igreja</a>
@@ -41,6 +53,7 @@
           <a class="nav-link active" href="index.html">
             <i class="fas fa-user-plus me-1"></i> Painel
           </a>
+          
         </li>
         <li class="nav-item">
           <a class="nav-link" href="listagem.html">
@@ -96,8 +109,11 @@
         </button>
       </div>
     </div>
-  </div>
+  </div>   
 </nav>
+
+-->
+  
 
   <div class="container form-container my-4">
     <h2 class="text-center mb-6">Cadastro de Membro</h2>
