--- a/listagem.html
+++ b/listagem.html
@@ -54,19 +54,24 @@ body { padding-top: 70px; }
 <!-- 🔹 Navbar -->
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
   <div class="container">
-    <a class="navbar-brand" href="index.html">Listagem</a>
+    <a class="navbar-brand" href="index.html">Lista de Membros</a>
+    
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
       <span class="navbar-toggler-icon"></span>
     </button>
+    
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav me-auto">
-        <li class="nav-item"><a class="nav-link" href="index.html">Painel</a></li>
-        <li class="nav-item"><a class="nav-link active" href="listagem.html">Listagem</a></li>
-        <li class="nav-item"><a class="nav-link" href="aniversariantes.html">Aniversariantes</a></li>
+        <!-- Botão Home -->
+        <li class="nav-item">
+          <a class="nav-link" href="index.html">
+            <i class="fas fa-home me-1"></i> Home
+          </a>
+        </li>
       </ul>
     </div>
-  </div>
-</nav>
+  </div> 
+  </nav>
 
 <div class="container mt-4">
   <div class="mb-3 d-flex justify-content-between">
