--- a/listagem.html
+++ b/listagem.html
@@ -55,7 +55,7 @@ body { padding-top: 70px; }
 <!-- 🔹 Navbar -->
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
   <div class="container">
-    <a class="navbar-brand" href="index.html">Lista de Membros</a>
+    <a class="navbar-brand">Lista de Membros</a>
     
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
       <span class="navbar-toggler-icon"></span>
