--- a/presenca/lista.html
+++ b/presenca/lista.html
@@ -6,7 +6,7 @@
   <title>Controle de Presença - Cultos</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
-  
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
   
   <style>
@@ -69,7 +69,7 @@
         <ul class="navbar-nav me-auto">
           <!-- Botão Home -->
           <li class="nav-item">
-            <a class="nav-link" href="index.html">
+            <a class="nav-link" href="../index.html">
               <i class="fas fa-home me-1"></i> Home
             </a>
           </li>
