--- a/presenca/lista.html
+++ b/presenca/lista.html
@@ -36,6 +36,7 @@
 
     .navbar {
       background-color: #4CAF50; /* verde */
+      z-index: 1030; /* Garante que o navbar fique acima de outros elementos */
     }
     .navbar .nav-link,
     .navbar .navbar-brand {
@@ -50,6 +51,17 @@
     .bg-verde-escuro {
         background-color: #1e7e34;
     }
+
+
+    body {
+  padding-top: 56px; /* Altura do navbar fixo */
+}
+
+
+.container.py-4 {
+  position: relative;
+  z-index: 1;
+}
     
    
   </style>
@@ -118,7 +130,6 @@
     </div>
   </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-database-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-auth-compat.js"></script>
